bug 75482 - work around incorrect options table layout in IE8
IE8 apparently gets the colspace=2 on the delegate options table
wrong. In order to work around this, we add a spacer cell so that the
table renders in to the second column. This doesn't look terribly
good, but it's much better than the previous buggy layout.

To compensate for the buggy layout, we include a slight style tweak
that makes the buttons align with the table above it.

http://bugzilla.zimbra.com/show_bug.cgi?id=75482

Copied from Perforce
 Change: 484508

--- a/WebRoot/css/zm.css
+++ b/WebRoot/css/zm.css
@@ -5100,6 +5100,11 @@ If you feel compelled to have a background color, please do so on a per skin lev
 .ZPropertySheet				{	@PropertySheet@				}
 .ZPropertySheet>TBODY>TR>TD {	@PropertySheetSpacing@		}
 
+/* make nested property sheets align properly */
+.ZPropertySheet>TBODY>TR>TD>.ZPropertySheet>TBODY>TR>TD:first-child {
+	@PropertySheetNoLeftSpacing@
+}
+
 
 /*briefcase app*/
 
